# acts

Core/include/Acts/Definitions/: PdgParticle.hpp
Core/include/Acts/EventData/: AnyTrackProxy.hpp
Core/include/Acts/Material/: AccumulatedSurfaceMaterial.hpp  BinnedSurfaceMaterial.hpp  InterpolatedMaterialMap.hpp  MaterialGridHelper.hpp  ProtoSurfaceMaterial.hpp  ProtoVolumeMaterial.hpp
Core/include/Acts/Utilities/: ProtoAxisHelpers.hpp
Core/src/Material/: AccumulatedSurfaceMaterial.cpp  BinnedSurfaceMaterial.cpp  MaterialGridHelper.cpp  ProtoVolumeMaterial.cpp
Examples/Algorithms/Jets/: CMakeLists.txt
Examples/Algorithms/Jets/include/ActsExamples/Jets/: TruthJetAlgorithm.hpp
Examples/Algorithms/Jets/src/: TruthJetAlgorithm.cpp
Examples/Algorithms/TrackFitting/src/: RefittingAlgorithm.cpp
Examples/Algorithms/TrackJets/: CMakeLists.txt
Examples/Io/Root/: CMakeLists.txt
Examples/Python/: CMakeLists.txt
Examples/Python/src/: RootOutput.cpp  TruthJet.cpp  TruthJetAlgorithm.cpp
Examples/Python/tests/: requirements.txt
Examples/Scripts/: requirements.txt
Examples/Scripts/Python/: full_chain_odd_LRT.py  particle_to_track_test.py  test_jet_sample.py  test_odd_edm4hep.py  track_to_truth_jet.py  track_to_truth_test.py  truth_jet_test.py  truth_tracking_ckf.py  truth_tracking_ckf_refitting.py  truth_tracking_kalman.py  truth_tracking_kalman_refitting.py
Plugins/FastJet/: CMakeLists.txt
Plugins/FastJet/src/: Jets.cpp
Plugins/Root/src/: HistogramConverter.cpp
Python/Core/src/: Definitions.cpp
docs/: requirements.txt
(+22 files in other folders)
